--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,13 +13,27 @@ dependencies:
   http: ^1.1.0
   cached_network_image: ^3.3.0
   cupertino_icons: ^1.0.8
+  flutter_bloc: ^8.1.3
+  equatable: ^2.0.5
+  get_it: ^7.6.4
+  intl: ^0.19.0
+  flutter_dotenv: ^5.0.2
+
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
   flutter_lints: ^5.0.0
+  flutter_launcher_icons: ^0.10.0
 
 flutter:
-
+  assets:
+    - assets/.env
   uses-material-design: true
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/icons/icon.png"
+
