--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,12 +18,17 @@ dependencies:
   get_it: ^7.6.4
   intl: ^0.19.0
   flutter_dotenv: ^5.0.2
+  shared_preferences: ^2.2.2
+  connectivity_plus: ^5.0.2
+  sqflite: ^2.3.0
+  path: ^1.8.3
 
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
+  mockito: ^5.4.4
+  build_runner: ^2.4.8
   flutter_lints: ^5.0.0
   flutter_launcher_icons: ^0.10.0
 
